--- a/_posts/2019-12-28-the-us-narrative-today.html
+++ b/_posts/2019-12-28-the-us-narrative-today.html
@@ -1482,107 +1482,107 @@ stories:
   domain: http://www.post-register.com/
   link: http://post-register.com/district-perfect-in-financial-integrity-rating/
 images:
-- name: downtown-trucksilo-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-granite.jpg
-- name: berlinwall-DSC-0084-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-pablo-blue.jpg
-- name: nazi-invasion-skulls-catacomb-up-close.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-skulls-catacomb-up-close.jpg
-- name: bluelake-crunch-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crunch-paper-file-00-00-00-00.jpg
-- name: amusement-park-amusement-park-2-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-sand-paper.jpg
-- name: hollywood-building-hollywood-building-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-ww2-dresden.jpg
-- name: stalin-time-capital-records-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-capital-records-building.jpg
-- name: fence-mexico-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-pablo-blue.jpg
-- name: death-valley-death-valley-national-park-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-crabapple.jpg
-- name: san-francisco-street-view-san-francisco-street-view-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-attack-planes.jpg
-- name: statue-of-liberty-front-view-statueofliberty-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-horiz-circuit.jpg
-- name: border-fence-border-fence-on-hill-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-colorful-blocks.jpg
-- name: machine-road-machine-road-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit-5.jpg
-- name: oldroad-old-road-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-alien-goggles.jpg
-- name: old-barn-old-barn-1500-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crafty-painting.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
+- name: white-house-lawn-white-house-lawn-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-bright-sand.jpg
+- name: abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+- name: braceros-domingo-ulloa-roman-marcus-looking-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-roman-marcus-looking-down.jpg
+- name: white-house-lawn-white-house-window-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colorful-dream.jpg
+- name: yuma-bank-yuma-bak-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-attack-planes.jpg
+- name: abandonedbuildings_bright_sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_bright_sand.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-pablo-blue.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-pablo-blue.JPG
+- name: statue-of-liberty-front-view-statueofliberty-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-post-modern.jpg
+- name: abandonedbuildings_crunch_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_crunch_paper.jpg
+- name: oldbarn-oldbarn-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-atari-asteroids.jpg
+- name: oldhouse-oldhouse-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-kandinsky-bv.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
+- name: fence-fence-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-monet-one.jpg
+- name: abandonedbuildings_internet_numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_internet_numbers.jpg
+- name: dc-statue-dcstatue-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-graham-sutherland.jpg
+- name: downtown-los-angeles-downtown-la-neo-instinct.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-neo-instinct.JPG
+- name: oldhouse-oldhouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-neo-instinct.jpg
+- name: capital-battle-capitolbattle-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-ww2-dresden.jpg
+- name: mistywoods-babyfoot-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-ww2-dresden.jpg
+- name: braceros-domingo-ulloa-electric-tower-sun-behind.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-electric-tower-sun-behind.jpg
+- name: old-church-oldchurch-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-light-dali.jpg
+- name: oldcabin-store-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-neo-instinct.jpg
+- name: bf-skinner-dark-city-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-dark-city-buildings.jpg
+- name: christianity-christianity-under-construction-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-electricity.jpg
+- name: yosemite-yosemite-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-deep-connections.jpg
+- name: dragon-desert-desert-dragon-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-soul.jpg
+- name: paris-paris-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-emily-carr.jpg
+- name: capital-battle-capitolbattle-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-crunch-paper.jpg
+- name: cargo-ship-cargo-ship-on-sea-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colorful-dream.jpg
+- name: aws-s3-stories-vancouver-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-light-dali.jpg
+- name: stories-power-lines-empty-space-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-power-lines-empty-space-sunday.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-post-modern.jpg
+- name: amusement-park-amusement-park-2-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit-3.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-feed-people.jpg
+- name: curtain-curtain-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dry-skin.jpg
+- name: server-cloud-server-racks-clouds-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-atari-missle.jpg
+- name: window-window-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-plentiful.jpg
+- name: old-granary-field-oldhouse-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-yellow-collage.jpg
+- name: dc-statue-dcstatue-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dry-skin.jpg
+- name: carry-load-carryload-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-atari-asteroids.jpg
+- name: death-valley-death-valley-national-park-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-really-hot.jpg
+- name: sand-hand-sand-hand-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-alberto-giacometti.jpg
+- name: oldtrain-oldtrain-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-spagetti-accident.jpg
+- name: store-on-corner-store-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-diego-rivera1.jpg
+- name: bluelake-clean-view-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-00-38-67.jpg
+- name: blossombar-cinnamon-rolls-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-cinnamon-rolls-file-00-00-50-62.jpg
+- name: beach-rocks-beach-rocks-currents-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-colored-circuits.jpg
+- name: old-cabin-oldcabin-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-deep-connections.jpg
 - name: soldier-kneeling-26304845730-d4e495e25f-o-kand-two.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-kand-two.jpg
-- name: beach-rocks-beach-rocks-currents-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-creativity.jpg
-- name: containership-containership-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-yellow-collage.jpg
-- name: birdhouse-birdhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-alberto-giacometti.jpg
-- name: dc-statue-dcstatue-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-green-zuma.jpg
-- name: beach-clouds-lifeguard-beachclouds-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-emily-carr.jpg
-- name: art-museum-art-museum-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-colorful-blocks.jpg
-- name: copper-circuit-train-small-town-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-small-town-station.jpg
-- name: oldbarn-oldbarn-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-oily-mcoilface.jpg
-- name: oldcabin-store-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-aqua.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-kandinsky-bv.jpg
-- name: power-lines-power-lines-empty-space-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-granite.jpg
-- name: beach-clouds-lifeguard-beachclouds-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-atari-asteroids.jpg
-- name: mosaic-face-mosaic-face-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-umberto-bocc.jpg
-- name: stories-oldgaspumps-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-oldgaspumps-umberto-bocc.jpg
-- name: braceros-domingo-ulloa-train-subway-125th-down-the-line.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-subway-125th-down-the-line.jpg
-- name: locked-up-steam-lock-up-steam-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-alberto-giacometti.jpg
-- name: wind-mills-windmills-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-far-away.jpg
-- name: locked-up-steam-lock-up-steam-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-atari-missle.jpg
-- name: old-gas-pumps-oldgaspumps-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-alien-goggles.jpg
-- name: server-cloud-server-racks-door-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-purple-storm.jpg
-- name: border-fence-border-fence-on-hill-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-alien-goggles.jpg
-- name: trucksilo-trucksilo-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dry-skin.jpg
-- name: oldcabin-oldcabin-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-colorful-blocks.jpg
-- name: school-clouds-church-clouds-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colored-circuits.jpg
-- name: oldhouse-granaryfield-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-smooth-ride.jpg
-- name: razorcliff-razorcliff-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-marcel-duchamp.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-gan-vogh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-gan-vogh.JPG
-- name: white-house-lawn-white-house-lawn-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dali-three.jpg
-- name: castle-wall-DSC-0067-blue-granite.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-granite.JPG
-- name: ellis-island-ellisisland-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-gan-vogh.jpg
-- name: stalin-time-people-walking-down-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-people-walking-down-street.jpg
-- name: art-museum-art-museum-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-dali.jpg
-- name: christianity-christianity-under-construction-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-attack-planes.jpg
-- name: ellis-island-ellis-island-room-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-cinnamon-rolls.jpg
-- name: amusement-park-amusement-park-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2.jpg
+- name: legal-statue-legalstatue-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-aqua.jpg
 ---
 Yes, Virginia, There Is A Hospital Monopoly Problem In Indiana.&nbsp;Trump Lashes Out As Impeachment Trial Stuck In Limbo.&nbsp;Nesting Loons Have A Record Year.&nbsp;Couple Return For A 2nd Dunk At Dunkin', This Time With Vows.&nbsp;Trump Retweets, Deletes, Post Naming Alleged Whistleblower.&nbsp;Hundreds Of Accused Clergy Left Off Church's Sex Abuse Lists.&nbsp;Waking Up To 5G.&nbsp;Memphis Finishes Whirlwind Stretch With Cotton Bowl Loss.&nbsp;
